# autoware.ai-core_perception

./: .gitlab-ci.yml  build_depends.repos
deadreckoner/: CMakeLists.txt  package.xml
deadreckoner/include/deadreckoner/: deadreckoner.h
deadreckoner/launch/: deadreckoner.launch
deadreckoner/nodes/: deadreckoner.cpp  deadreckoner_node.cpp
deadreckoner/src/: deadreckoner.cpp  deadreckoner_node.cpp
ekf_localizer/launch/: ekf_localizer.launch
ekf_localizer/src/: ekf_localizer.cpp
gnss_localizer/test/: nmea_test.cpp
gpsins_localizer/: CMakeLists.txt  README.md  package.xml
gpsins_localizer/config/: params.yaml
gpsins_localizer/launch/: gpsins_localizer_node.launch  lgsvl_simulation.launch
gpsins_localizer/scripts/: lgsvl_converter.py
gpsins_localizer/src/: gpsins_localizer_nodelet.cpp
imm_ukf_pda_track/launch/: imm_ukf_pda_track_lanelet2.launch  imm_ukf_pda_track_option.launch
lidar_apollo_cnn_seg_detect/include/: cnn_segmentation.h
lidar_apollo_cnn_seg_detect/nodes/: cnn_segmentation.cpp
lidar_fake_perception/nodes/: lidar_fake_perception.cpp
lidar_imm_ukf_pda_track/: README.md
lidar_imm_ukf_pda_track/launch/: imm_ukf_pda_track.launch
lidar_localizer/: CMakeLists.txt
pcl_omp_registration/: CMakeLists.txt
trafficlight_recognizer/: CMakeLists.txt  interface.yaml  package.xml  setup.py
trafficlight_recognizer/cmake/: FindTensorFlow.cmake
trafficlight_recognizer/include/: Context.h
trafficlight_recognizer/launch/: feat_proj.launch  feat_proj_option.launch  traffic_light_recognition_tensorflow.launch
(+68 files in other folders)
