<?xml version="1.0"?>
<package format="2">
  <name>deadreckoner</name>
  <version>1.12.0</version>
  <description>The deadreckoner package</description>

  <maintainer email="aohsato@gmail.com">Akihito Ohsato</maintainer>
  <author email="aohsato@gmail.com">Akihito Ohsato</author>
  <license>apache2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
</package>
